<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            style="@style/GridRow"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/buttonDrop"
                style="@style/GridButtonIcon"
                app:icon="@drawable/ic_baseline_arrow_downward_24" />

            <Button
                android:id="@+id/buttonSwap"
                style="@style/GridButtonIcon"
                app:icon="@drawable/ic_baseline_swap_vert_24" />

            <Button
                android:id="@+id/buttonAC"
                style="@style/GridButtonIcon"
                app:icon="@drawable/ic_baseline_delete_forever_24" />

        </LinearLayout>

        <LinearLayout style="@style/GridRow">

            <Button
                android:id="@+id/buttonChangeSign"
                style="@style/GridButtonDark"
                android:text="@string/buttonChangeSign" />

            <Button
                android:id="@+id/buttonPower"
                style="@style/GridButtonDark"
                android:text="@string/buttonPower" />

            <Button
                android:id="@+id/buttonRoot"
                style="@style/GridButtonDark"
                android:text="@string/buttonRoot" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/GridButtonDark"
                android:text="@string/buttonDivide"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout style="@style/GridRow">

            <Button
                android:id="@+id/buttonKey7"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey7" />

            <Button
                android:id="@+id/buttonKey8"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey8" />

            <Button
                android:id="@+id/buttonKey9"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey9" />


            <Button
                android:id="@+id/buttonMultiply"
                style="@style/GridButtonDark"
                android:text="@string/buttonMultiply" />

        </LinearLayout>

        <LinearLayout style="@style/GridRow">

            <Button
                android:id="@+id/buttonKey4"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey4" />

            <Button
                android:id="@+id/buttonKey5"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey5" />

            <Button
                android:id="@+id/buttonKey6"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey6" />


            <Button
                android:id="@+id/buttonSubtract"
                style="@style/GridButtonDark"
                android:text="@string/buttonSubtract" />

        </LinearLayout>

        <LinearLayout style="@style/GridRow">

            <Button
                android:id="@+id/buttonKey1"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey1" />

            <Button
                android:id="@+id/buttonKey2"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey2" />

            <Button
                android:id="@+id/buttonKey3"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey3" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/GridButtonDark"
                android:text="@string/buttonAdd" />

        </LinearLayout>

        <LinearLayout style="@style/GridRow">

            <Button
                android:id="@+id/buttonKey0"
                style="@style/GridButtonLight"
                android:text="@string/buttonKey0" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/GridButtonLight"
                android:text="@string/buttonDot" />

            <Button
                android:id="@+id/buttonBackspace"
                style="@style/GridButtonLight"
                app:icon="@drawable/ic_outline_backspace_24" />

            <Button
                android:id="@+id/buttonEnter"
                style="@style/GridButtonDarkAccent"
                app:icon="@drawable/ic_baseline_arrow_upward_24" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/inputTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurfaceVariant"
            android:drawablePadding="5sp"
            android:fontFamily="sans-serif-light"
            android:paddingVertical="8dp"
            android:paddingHorizontal="18sp"
            android:textSize="32sp"
            app:drawableTint="?attr/colorOnSurfaceVariant"
            tools:text="text" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSettings"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:icon="@drawable/ic_baseline_settings_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>