<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchDarkMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="279dp"
        android:layout_marginBottom="40dp"
        android:text="@string/darkMode"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPrecision"
        app:layout_constraintEnd_toEndOf="@+id/buttonIncrease"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPrecision"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="343dp"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/switchDarkMode"
        tools:text="6" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/decimalPrecision"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPrecision"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPrecision"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonDecrease"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_baseline_remove_circle_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPrecision"
        app:layout_constraintEnd_toStartOf="@+id/textViewPrecision"
        app:layout_constraintTop_toTopOf="@+id/textViewPrecision" />

    <Button
        android:id="@+id/buttonIncrease"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_baseline_add_circle_24"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPrecision"
        app:layout_constraintStart_toEndOf="@+id/textViewPrecision"
        app:layout_constraintTop_toTopOf="@+id/textViewPrecision" />
</androidx.constraintlayout.widget.ConstraintLayout>